parser.output
Terminals unused in grammar

   RETURN
   BREAK
   IF
   ELIF
   ELSE
   FOR
   WHILE
   ARITOP
   BOOLOP
   NOT
   RELOP
   SCOMMA
   BOOL
   CHAR


Grammar

    0 $accept: File $end

    1 File: Imports GlobalDecs Functions
    2     | GlobalDecs Functions
    3     | Functions

    4 Imports: IMPORT ID Imports
    5        | NL

    6 GlobalDecs: GlobalDec NL
    7           | GlobalDecs GlobalDec NL

    8 GlobalDec: ARRAY VARTYPE ID OS INTL OneDorTwoD
    9          | VARTYPE ID AssignedOrEmpty

   10 AssignedOrEmpty: ASGN Expression NL
   11                | NL

   12 OneDorTwoD: CS NL
   13           | COMMA INTL CS NL

   14 Functions: Function
   15          | Function NL Functions

   16 Function: DEF ID OC FunctionPrime

   17 FunctionPrime: ArgList NL OF Codes CF NL

   18 Codes: NL

   19 ArgList: CC
   20        | Argument ArgListPrime

   21 ArgListPrime: COMMA ArgListPrime
   22             | CC

   23 Argument: VARTYPE ID

   24 Expression: INTL


Terminals, with rules where they appear

$end (0) 0
error (256)
ARRAY (258) 8
RETURN (259)
BREAK (260)
IMPORT (261) 4
IF (262)
ELIF (263)
ELSE (264)
FOR (265)
WHILE (266)
DEF (267) 16
ARITOP (268)
BOOLOP (269)
NOT (270)
RELOP (271)
ASGN (272) 10
SCOMMA (273)
COMMA (274) 13 21
VARTYPE (275) 8 9 23
BOOL (276)
OF (277) 17
CF (278) 17
OC (279) 16
CC (280) 19 22
OS (281) 8
CS (282) 12 13
ID (283) 4 8 9 16 23
CHAR (284)
INTL (285) 8 13 24
NL (286) 5 6 7 10 11 12 13 15 17 18


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
File (33)
    on left: 1 2 3, on right: 0
Imports (34)
    on left: 4 5, on right: 1 4
GlobalDecs (35)
    on left: 6 7, on right: 1 2 7
GlobalDec (36)
    on left: 8 9, on right: 6 7
AssignedOrEmpty (37)
    on left: 10 11, on right: 9
OneDorTwoD (38)
    on left: 12 13, on right: 8
Functions (39)
    on left: 14 15, on right: 1 2 3 15
Function (40)
    on left: 16, on right: 14 15
FunctionPrime (41)
    on left: 17, on right: 16
Codes (42)
    on left: 18, on right: 17
ArgList (43)
    on left: 19 20, on right: 17
ArgListPrime (44)
    on left: 21 22, on right: 20 21
Argument (45)
    on left: 23, on right: 20
Expression (46)
    on left: 24, on right: 10


State 0

    0 $accept: . File $end

    ARRAY    shift, and go to state 1
    IMPORT   shift, and go to state 2
    DEF      shift, and go to state 3
    VARTYPE  shift, and go to state 4
    NL       shift, and go to state 5

    File        go to state 6
    Imports     go to state 7
    GlobalDecs  go to state 8
    GlobalDec   go to state 9
    Functions   go to state 10
    Function    go to state 11


State 1

    8 GlobalDec: ARRAY . VARTYPE ID OS INTL OneDorTwoD

    VARTYPE  shift, and go to state 12


State 2

    4 Imports: IMPORT . ID Imports

    ID  shift, and go to state 13


State 3

   16 Function: DEF . ID OC FunctionPrime

    ID  shift, and go to state 14


State 4

    9 GlobalDec: VARTYPE . ID AssignedOrEmpty

    ID  shift, and go to state 15


State 5

    5 Imports: NL .

    $default  reduce using rule 5 (Imports)


State 6

    0 $accept: File . $end

    $end  shift, and go to state 16


State 7

    1 File: Imports . GlobalDecs Functions

    ARRAY    shift, and go to state 1
    VARTYPE  shift, and go to state 4

    GlobalDecs  go to state 17
    GlobalDec   go to state 9


State 8

    2 File: GlobalDecs . Functions
    7 GlobalDecs: GlobalDecs . GlobalDec NL

    ARRAY    shift, and go to state 1
    DEF      shift, and go to state 3
    VARTYPE  shift, and go to state 4

    GlobalDec  go to state 18
    Functions  go to state 19
    Function   go to state 11


State 9

    6 GlobalDecs: GlobalDec . NL

    NL  shift, and go to state 20


State 10

    3 File: Functions .

    $default  reduce using rule 3 (File)


State 11

   14 Functions: Function .
   15          | Function . NL Functions

    NL  shift, and go to state 21

    $default  reduce using rule 14 (Functions)


State 12

    8 GlobalDec: ARRAY VARTYPE . ID OS INTL OneDorTwoD

    ID  shift, and go to state 22


State 13

    4 Imports: IMPORT ID . Imports

    IMPORT  shift, and go to state 2
    NL      shift, and go to state 5

    Imports  go to state 23


State 14

   16 Function: DEF ID . OC FunctionPrime

    OC  shift, and go to state 24


State 15

    9 GlobalDec: VARTYPE ID . AssignedOrEmpty

    ASGN  shift, and go to state 25
    NL    shift, and go to state 26

    AssignedOrEmpty  go to state 27


State 16

    0 $accept: File $end .

    $default  accept


State 17

    1 File: Imports GlobalDecs . Functions
    7 GlobalDecs: GlobalDecs . GlobalDec NL

    ARRAY    shift, and go to state 1
    DEF      shift, and go to state 3
    VARTYPE  shift, and go to state 4

    GlobalDec  go to state 18
    Functions  go to state 28
    Function   go to state 11


State 18

    7 GlobalDecs: GlobalDecs GlobalDec . NL

    NL  shift, and go to state 29


State 19

    2 File: GlobalDecs Functions .

    $default  reduce using rule 2 (File)


State 20

    6 GlobalDecs: GlobalDec NL .

    $default  reduce using rule 6 (GlobalDecs)


State 21

   15 Functions: Function NL . Functions

    DEF  shift, and go to state 3

    Functions  go to state 30
    Function   go to state 11


State 22

    8 GlobalDec: ARRAY VARTYPE ID . OS INTL OneDorTwoD

    OS  shift, and go to state 31


State 23

    4 Imports: IMPORT ID Imports .

    $default  reduce using rule 4 (Imports)


State 24

   16 Function: DEF ID OC . FunctionPrime

    VARTYPE  shift, and go to state 32
    CC       shift, and go to state 33

    FunctionPrime  go to state 34
    ArgList        go to state 35
    Argument       go to state 36


State 25

   10 AssignedOrEmpty: ASGN . Expression NL

    INTL  shift, and go to state 37

    Expression  go to state 38


State 26

   11 AssignedOrEmpty: NL .

    $default  reduce using rule 11 (AssignedOrEmpty)


State 27

    9 GlobalDec: VARTYPE ID AssignedOrEmpty .

    $default  reduce using rule 9 (GlobalDec)


State 28

    1 File: Imports GlobalDecs Functions .

    $default  reduce using rule 1 (File)


State 29

    7 GlobalDecs: GlobalDecs GlobalDec NL .

    $default  reduce using rule 7 (GlobalDecs)


State 30

   15 Functions: Function NL Functions .

    $default  reduce using rule 15 (Functions)


State 31

    8 GlobalDec: ARRAY VARTYPE ID OS . INTL OneDorTwoD

    INTL  shift, and go to state 39


State 32

   23 Argument: VARTYPE . ID

    ID  shift, and go to state 40


State 33

   19 ArgList: CC .

    $default  reduce using rule 19 (ArgList)


State 34

   16 Function: DEF ID OC FunctionPrime .

    $default  reduce using rule 16 (Function)


State 35

   17 FunctionPrime: ArgList . NL OF Codes CF NL

    NL  shift, and go to state 41


State 36

   20 ArgList: Argument . ArgListPrime

    COMMA  shift, and go to state 42
    CC     shift, and go to state 43

    ArgListPrime  go to state 44


State 37

   24 Expression: INTL .

    $default  reduce using rule 24 (Expression)


State 38

   10 AssignedOrEmpty: ASGN Expression . NL

    NL  shift, and go to state 45


State 39

    8 GlobalDec: ARRAY VARTYPE ID OS INTL . OneDorTwoD

    COMMA  shift, and go to state 46
    CS     shift, and go to state 47

    OneDorTwoD  go to state 48


State 40

   23 Argument: VARTYPE ID .

    $default  reduce using rule 23 (Argument)


State 41

   17 FunctionPrime: ArgList NL . OF Codes CF NL

    OF  shift, and go to state 49


State 42

   21 ArgListPrime: COMMA . ArgListPrime

    COMMA  shift, and go to state 42
    CC     shift, and go to state 43

    ArgListPrime  go to state 50


State 43

   22 ArgListPrime: CC .

    $default  reduce using rule 22 (ArgListPrime)


State 44

   20 ArgList: Argument ArgListPrime .

    $default  reduce using rule 20 (ArgList)


State 45

   10 AssignedOrEmpty: ASGN Expression NL .

    $default  reduce using rule 10 (AssignedOrEmpty)


State 46

   13 OneDorTwoD: COMMA . INTL CS NL

    INTL  shift, and go to state 51


State 47

   12 OneDorTwoD: CS . NL

    NL  shift, and go to state 52


State 48

    8 GlobalDec: ARRAY VARTYPE ID OS INTL OneDorTwoD .

    $default  reduce using rule 8 (GlobalDec)


State 49

   17 FunctionPrime: ArgList NL OF . Codes CF NL

    NL  shift, and go to state 53

    Codes  go to state 54


State 50

   21 ArgListPrime: COMMA ArgListPrime .

    $default  reduce using rule 21 (ArgListPrime)


State 51

   13 OneDorTwoD: COMMA INTL . CS NL

    CS  shift, and go to state 55


State 52

   12 OneDorTwoD: CS NL .

    $default  reduce using rule 12 (OneDorTwoD)


State 53

   18 Codes: NL .

    $default  reduce using rule 18 (Codes)


State 54

   17 FunctionPrime: ArgList NL OF Codes . CF NL

    CF  shift, and go to state 56


State 55

   13 OneDorTwoD: COMMA INTL CS . NL

    NL  shift, and go to state 57


State 56

   17 FunctionPrime: ArgList NL OF Codes CF . NL

    NL  shift, and go to state 58


State 57

   13 OneDorTwoD: COMMA INTL CS NL .

    $default  reduce using rule 13 (OneDorTwoD)


State 58

   17 FunctionPrime: ArgList NL OF Codes CF NL .

    $default  reduce using rule 17 (FunctionPrime)
